--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.6",
+    "@iconify-json/carbon": "^1.1.7",
+    "@iconify-json/ep": "^1.1.6",
+    "@types/node": "^18.6.2",
+    "@vueuse/core": "^9.0.0",
+    "axios": "^0.27.2",
     "element-plus": "^2.2.11",
+    "pinia": "^2.0.17",
+    "sass": "^1.54.0",
     "unplugin-auto-import": "^0.10.2",
+    "unplugin-icons": "^0.14.7",
     "unplugin-vue-components": "^0.21.2",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
