feat:add plugin - setup name as comonent name

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,5 +5,8 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "plugins/**/*.ts",
+    "vite.config.ts",
+  ]
 }
