--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@vueuse/core": "^9.0.0",
     "axios": "^0.27.2",
     "element-plus": "^2.2.11",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "pinia": "^2.0.17",
+    "qrcodejs2": "^0.0.2",
     "sass": "^1.54.0",
     "unplugin-auto-import": "^0.10.2",
     "unplugin-icons": "^0.14.7",
     "unplugin-vue-components": "^0.21.2",
     "vite-plugin-inspect": "^0.6.0",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
