--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify-json/carbon": "^1.1.7",
     "@iconify-json/ep": "^1.1.6",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "^18.6.2",
     "@vueuse/core": "^9.0.0",
     "axios": "^0.27.2",
